widget decomprosion fixed with class - hero container - align items - stretch and not center *

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -11,7 +11,7 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     box-sizing: border-box;
 }
